<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:orientation="vertical"
    android:soundEffectsEnabled="false" >

    <TextView
        android:id="@+id/event_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title_event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/Black"
        android:textSize="@dimen/title_detail"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/event_sub_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/Gray"
        android:textSize="@dimen/subtitle_detail"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/info_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:padding="15dip" >

        <RelativeLayout
            android:id="@+id/layout_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/det_cat"
                android:textColor="@color/Gray"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/res_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/title_cat"
                android:textAllCaps="true"
                android:textColor="@color/Orange"
                android:textSize="@dimen/standard_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_when"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_cat"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_when"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/det_when"
                android:textColor="@color/Gray"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/res_when"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/title_when"
                android:textSize="@dimen/standard_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_when_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_when"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/title_when_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/det_when_hour"
                android:textColor="@color/Gray"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/res_when_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/title_when_hour"
                android:textSize="@dimen/standard_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_where"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_when_hour"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/det_where"
                android:textColor="@color/Gray"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/res_where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/title_where"
                android:textSize="@dimen/standard_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_where"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/det_price"
                android:textColor="@color/Gray"
                android:textSize="@dimen/standard_text"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/res_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/title_price"
                android:textSize="@dimen/standard_text" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/desc_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border"
        android:padding="15dip" >

        <TextView
            android:id="@+id/res_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/det_desc"
            android:textSize="@dimen/standard_text"
            android:typeface="sans" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_event_suggest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/Black"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/event_suggested"
        android:textAllCaps="true"
        android:textColor="@color/Orange"
        android:textSize="14sp"
        android:visibility="gone" />

</LinearLayout>